<resources>
    <string name="app_name">Doe Vida</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Procurar</string>
    <string name="title_activity_user_cadastre">Cadastre-se</string>
    <string name="ask_all_donors">Pedir para todos os doadores</string>
    <string name="hint_name">Nome</string>
    <string name="hint_date_of_birth">Data de nascimento</string>
    <string name="hint_city">Cidade onde reside</string>
    <string name="hint_state">Estado</string>
    <string name="hint_hospital">Hospital</string>
    <string name="hint_date_of_last_donation">Data da última doação (opcional)</string>
    <string name="hint_date_limit_donation">Data limite para doação</string>
    <string name="hint_user_name">Nome de usuário</string>
    <string name="hint_name_patient">Nome do paciente:</string>
    <string name="hint_user">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_confirm">Confirmar senha</string>
    <string name="btn_cadastre">Cadastrar</string>
    <string name="btn_enter">Entrar</string>
    <string name="btn_register">Cadastre-se</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_icon">Ícone do aplicativo</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="a_positivo">A+</string>
    <string name="a_negativo">A-</string>
    <string name="b_positivo">B+</string>
    <string name="b_negativo">B-</string>
    <string name="ab_positivo">AB+</string>
    <string name="ab_negativo">AB-</string>
    <string name="o_positivo">O+</string>
    <string name="o_negativo">O-</string>
    <string name="btn_ver_perfil">Ver perfil</string>

    <string name="err_msg_name">Insira seu nome completo</string>
    <string name="err_msg_birth">Insira sua data de nascimento</string>
    <string name="err_msg_city">Insira sua Cidade</string>
    <string name="err_msg_state">Insira seu Estado</string>
    <string name="err_msg_hospital">Insira o hospital</string>
    <string name="err_msg_username">Insira um nome de usuário</string>
    <string name="err_msg_password">Insira uma senha</string>
    <string name="err_msg_password_confirm">Insira sua senha novamente</string>
    <string name="err_short_name">Nome muito curto</string>
    <string name="err_invalid_birth">Data inválida</string>
    <string name="err_short_city_name">Nome de cidade muito curto</string>
    <string name="err_short_state_name">Nome de estado muito curto</string>
    <string name="err_short_hospital_name">Nome de hospital muito curto</string>
    <string name="err_short_username">Nome de usuário muito curto</string>
    <string name="err_short_password">A senha deve conter no mínimo 6 caracteres</string>
    <string name="title_activity_donors">Doadores</string>
    <string name="label_last_donation">Última doação em:</string>
    <string name="title_activity_donors_adapter">DonorsAdapter</string>
    <string name="drawer_open">Abre drawer</string>
    <string name="drawer_close">Fecha drawer</string>
    <string name="title_activity_information">Informações</string>
    <string name="btn_more_information">Ver mais</string>
    <string name="title_activity_more_information1">MoreInformation1Activity</string>
    <string name="title_activity_more_information3">MoreInformation3Activity</string>
    <string name="title_activity_more_information2">MoreInformation2Activity</string>
    <string name="requirement4">- Estar em boas condições de saúde;</string>
    <string name="requirement1">- Ter entre 16 e 69 anos;</string>
    <string name="requirement2">- Pesar no mínimo 50kg;</string>
    <string name="requirement5">- Estar descansado (ter dormido pelo menos 6 horas nas últimas 24
        horas;)</string>
    <string name="requirement3">- Estar bem alimentado;</string>
    <string name="requirement6">- Apresentar documento original com foto emitido por órgão oficial
        (Carteira de Identidade, Carteira de Trabalho...).</string>
    <string name="impediment1">- Já teve malária;</string>
    <string name="impediment2">- Já teve elefantíase;</string>
    <string name="impediment3">- Já teve hanseníase;</string>
    <string name="impediment4">- Teve tuberculose extra-pulmonar;</string>
    <string name="impediment5">- Teve hepatite após os 10 anos de idade;</string>
    <string name="impediment6">- Teve algum tipo de câncer, incluindo leucemia;</string>
    <string name="impediment7">- Tem ou teve um teste positivo para HIV;</string>
    <string name="impediment8">- Tem problema de coagulação de sangue;</string>
    <string name="impediment9">- Tem graves problemas no pulmão, coração, rins ou fígado;</string>
    <string name="impediment10">- Tem doença de chagas;</string>
    <string name="impediment11">- É diabético com complicações vasculares.</string>

    <string name="create_form">Criar formulário de solicitação</string>
    <string name="reuse_form">Usar um dos meus formulários</string>
    <string name="cancel">CANCELAR</string>
    <string name="ok">OK</string>
    <string name="send">ENVIAR</string>
    <string name="recebi">RECEBI</string>

    <string name="blood_type">Tipo sanguíneo</string>
    <string name="hint_name_user">Nome do usuário</string>
    <string name="hint_city_user">Cidade do usuário</string>
    <string name="donates">Número de doações</string>
    <string name="hint_number_donates">3 doações</string>
    <string name="hint_date_last_donation">XX/XX/XXXX</string>
    <string name="title_activity_notification">Notificações</string>

    <string name="title_activity_accepted_order">Pedido aceito</string>
    <string name="donor_name">Nome do doador</string>
    <string name="accepted_order1">aceitou seu pedido de doação de sangue para:</string>
    <string name="receptor_name">Nome do receptor</string>
    <string name="accepted_order2">Aguarde a doação.</string>


    <string name="title_activity_requested_me">Pediram-me</string>
    <string name="status">STATUS</string>

    <string name="title_activity_my_requests">Meus pedidos</string>
    <string name="hint_name_requester">Nome do solicitante</string>
    <string name="hint_date_request">XX/XX/XXXX</string>

    <string name="title_activity_donation_order">Pedido de doação</string>
    <string name="order_message">Aceite o pedido e dirija-se ao Hemocentro mais próximo, informando os dados do paciente.</string>
    <string name="patient">Paciente: </string>
    <string name="patient_name">Nome do paciente</string>
    <string name="hospital">Hospital: </string>
    <string name="hospital_name">Nome do hospital</string>
    <string name="city">Cidade: </string>
    <string name="city_name">Nome da cidade</string>
    <string name="state">Estado: </string>
    <string name="state_name">Nome do estado</string>
    <string name="blood_type_patient">Tipo sanguíneo: </string>
    <string name="donation_deadline">Data limite para doação: </string>
    <string name="deadline">XX/XX/XXXX</string>
    <string name="refuse">RECUSAR</string>
    <string name="accept">ACEITAR</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_nao_conectado">NaoConectadoActivity</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="img_share">Botão Compartilhar</string>


    <string name="title_activity_confirmation_donation">ConfirmationDonationActivity</string>
    <string name="held_donation">realizou a doação de sangue para:</string>
    <string name="receptor">Nome do receptor</string>
    <string name="confirm_received">Confirme o recebimento.</string>
    <string name="title_activity_information_order">Pedido</string>

    <string name="confirmation_donation1">Confirmo minha doação </string>
    <string name="confirmation_donation2">de sangue para</string>
    <string name="confirmation_receipt1">Aguarde confirmação</string>
    <string name="confirmation_receipt2">de recebimento</string>

    ------------ activity_confirmation_receipt_donation -------------
    <string name="update_last_donation_date">Atualize a data da última doação.</string>
    <string name="update">ATUALIZAR</string>
    <string name="confirmed_donation_receipt">confirmou o recebimento da sua doação de sangue para</string>
    <string name="user_requester_name">Nome do usuário</string>
    <string name="date_of_last_donation">Data da doação</string>

    --------------activity_my_profile--------------------------
    <string name="title_activity_my_profile">Meu perfil</string>
    <string name="name">Nome: </string>
    <string name="input_name">Nome</string>
    <string name="user_name">Nome do usuário: </string>
    <string name="input_user_name">Nome do usuário</string>
    <string name="date_of_birth">Data de nascimento: </string>
    <string name="input_date_of_birth">XX/XX/XXXX</string>
    <string name="gender">Sexo: </string>
    <string name="input_gender">Sexo</string>
    <string name="blood_type_name">Tipo sanguíneo: </string>
    <string name="input_blood_type">Tipo sanguíneo</string>
    <string name="date_of_last_donation2">Data da última doação: </string>
    <string name="input_date_of_last_donation">XX/XX/XXXX</string>
    <string name="btn_change_data"> Alterar dados</string>

    --------------activity_edit_my_profile--------------------------
    <string name="title_activity_edit_my_profile">Editar Perfil</string>
    <string name="btn_save">Salvar</string>
    <string name="hint_password_new">Nova senha</string>
    <string name="hint_password_confirm_new">Confirmar nova senha</string>
    <string name="hint_password_current">Senha atual</string>

</resources>
