<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.UserProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/iv_donates"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/donates"/>

            <TextView
                android:id="@+id/tv_number_donates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number_donates"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_input_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_name"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:paddingStart="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_input_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_user_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_input_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_date_of_birth"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_input_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_gender"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_blood_type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_type_name"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_input_blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_blood_type"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_date_of_last_donation2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_last_donation2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_input_date_of_last_donation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_date_of_last_donation"
                android:paddingStart="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingStart="10dp"
            android:paddingBottom="30dp">

            <Button
                android:id="@+id/btn_change_data"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:text="@string/btn_change_data"
                android:textColor="@color/white"
                android:background="@color/red"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
