<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="16dp">


    <RadioButton
        android:id="@+id/rd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/create_form" />

    <RadioButton
        android:id="@+id/rd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rd1"
        android:paddingLeft="10dp"
        android:text="@string/reuse_form" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/rd2"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minWidth="64dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/blue"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minWidth="64dp"
            android:gravity="start|center_vertical"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/blue"
            android:text="@string/ok" />
    </LinearLayout>




</RelativeLayout>
