<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="projeto.les.doevida.doevida.views.MoreInformation2Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/requirement" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement1"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement2"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement3"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement4"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement5"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requirement6"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
